## Process this file with automake to produce Makefile.in
PFLAGS=-module -avoid-version -no-undefined

libshift_la_LDFLAGS = $(PFLAGS)
libshift_la_LIBADD = @COMPIZ_LIBS@
libshift_la_SOURCES = shift_options.c shift_options.h shift.c

INCLUDES =                              \
	-I$(top_srcdir)/include         \
	@COMPIZ_CFLAGS@                  \
	-DDATADIR='"$(compdatadir)"'        \
	-DLIBDIR='"$(libdir)"'              \
	-DLOCALEDIR="\"@datadir@/locale\""  \
	-DIMAGEDIR='"$(imagedir)"'          

moduledir = $(plugindir)


module_LTLIBRARIES = libshift.la

CLEANFILES = *_options.c *_options.h

%_options.h: ../../metadata/%.xml
		$(BCOP_BIN) --header $@ $<

%_options.c: ../../metadata/%.xml %_options.h
		$(BCOP_BIN) --source $@ $<
